Fix spacing of each article, pre do not align

--- a/src/stylus/lutachu.styl
+++ b/src/stylus/lutachu.styl
@@ -23,3 +23,7 @@
 // Other
 @import "lutachu/src/utilities.styl"
 @import "lutachu/src/print.styl"
+
+pre
+  margin: 0 calc(-2em - 4px) 1em calc(-2em - 5px)
+  padding: .8em calc(2em + 2px)
