--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -43,8 +43,8 @@ body
 #home
   padding: 1em 2em
 
-#post
-  margin-bottom: .5em
+.post
+  margin: .75em 0
 
   &:last-child
     margin-bottom: 0
